--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,9 @@ TabSubtle: #39393b - 240, 2%, 23% */
         --popover: 0 0% 3.9%;
         --popover-foreground: 0 0% 98%;
         --primary: 239, 69%, 86%;
+        --primary-hover: 100, 69%, 86%;
         --primary-foreground: 240, 3%, 13%;
+        --primary-foreground-hover: 100, 3%, 13%;
         --secondary: 235, 31%, 22%;
         --secondary-foreground: 249, 24%, 94%;
         --muted: 236 27% 24%;
