--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	pointer-events: auto !important;
 }
 
 /* 
@@ -28,6 +29,8 @@ Accent: #F8D461 - 46, 92%, 68%
 Accent-foreground: #202022 - 240, 3%, 13%
 Tab: #363636 - 0, 0%, 21%
 TabSubtle: #d3d2d8 - 250, 7%, 84%
+Destructive: #FFBDBD - 0, 100%, 87%
+Desctructive-foreground: #430F0F - 0, 63%, 16%
 */
 
 @layer base {
@@ -48,8 +51,8 @@ TabSubtle: #d3d2d8 - 250, 7%, 84%
 		--accent-foreground: 232 32% 14%;
 		--tab: 0 0% 21%;
 		--tab-subtle: 250, 7%, 84%;
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 0 0% 98%;
+		--destructive: 0 100% 87%;
+		--destructive-foreground: 0 63% 16%;
 		--border: 0 0% 89.8%;
 		--input: 0 0% 89.8%;
 		--ring: 0 0% 3.9%;
@@ -71,7 +74,10 @@ Secondary-foreground: #EEEDF4 - 249, 24%, 94%
 Accent: #F8D461 - 46, 92%, 68%
 Accent-foreground: #221B02 - 47, 89%, 7%
 Tab: #C7C7C7 - 0, 0%, 78%
-TabSubtle: #39393b - 240, 2%, 23% */
+TabSubtle: #39393b - 240, 2%, 23% 
+Desctructive: #430F0F - 0, 63%, 16%
+Destructive-foreground: #FFBDBD - 0, 100%, 87%
+*/
 	.dark {
 		--background: 240, 3%, 13%;
 		--foreground: 249, 24%, 94%;
@@ -91,8 +97,8 @@ TabSubtle: #39393b - 240, 2%, 23% */
 		--accent-foreground: 46, 92%, 68%;
 		--tab: 0 0% 78%;
 		--tab-subtle: 240, 2%, 23%;
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 0 0% 98%;
+		--destructive: 0 63% 16%;
+		--destructive-foreground: 0 100% 87%;
 		--border: 0 0% 14.9%;
 		--input: 0 0% 14.9%;
 		--ring: 0 0% 83.1%;
