--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 	font-family: "Philosopher", -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, "Helvetica Neue", Arial, sans-serif;
 	font-optical-sizing: auto;
-	font-weight: 500;
+	font-weight: 400;
 	font-style: normal;
-	line-height: 1.5;
+	/* line-height: 1.5; */
 	/* letter-spacing: 0.5px; */
 
 	background-color: var(--background);
@@ -115,4 +115,10 @@
 /* Only show background for non-dash values */
 #note:not([data-value="-"]):before {
 	opacity: 1;
+}
+
+#debug {
+	background-color: rgba(0, 255, 255, 0.1);
+	border: 1px solid rgba(0, 255, 255, 0.2);
+	color: rgba(0, 255, 255, 0.8);
 }
