--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,10 @@
 		--secondary-foreground: 240 3% 13%;
 		--muted: 0 0% 96.1%;
 		--muted-foreground: 0 0% 21%;
-		--accent: 46 92% 68%;
-		--accent-foreground: 232 32% 14%;
+		--accent: 238 30% 39%;
+		--accent-foreground: 249 24% 94%;
+		--popover: 50 0% 20%;
+		--popover-foreground: 0 0% 3.9%;
 		--tab: 0 0% 21%;
 		--tab-subtle: 250 7% 84%;
 		--destructive: 0 84% 60%;
@@ -73,8 +75,10 @@
 		--secondary-foreground: 249 24% 94%;
 		--muted: 236 27% 24%;
 		--muted-foreground: 0 0% 78%;
-		--accent: 47 89% 7%;
-		--accent-foreground: 46 92% 68%;
+		--accent: 239 69% 86%;
+		--accent-foreground: 240 3% 13%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 0 0% 3.9%;
 		--tab: 0 0% 78%;
 		--tab-subtle: 240 2% 23%;
 		--destructive: 0 84% 60%;
@@ -110,11 +114,6 @@
 	border-radius: 0.3rem;
 	z-index: -1;
 	opacity: 0;
-}
-
-/* Only show background for non-dash values */
-#note:not([data-value="-"]):before {
-	opacity: 1;
 }
 
 #debug {
