--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,17 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+::selection {
+	background-color: hsl(var(--primary));
+	color: hsl(var(--primary-foreground));
+	opacity: 0.9;
+}
+
+::selection[data-value*="-"] {
+	background-color: hsl(var(--muted));
+	color: hsl(var(--muted-foreground));
+}
+
 /* For light mode */
 :root[data-mantine-color-scheme="light"] body {
 	--mantine-color-body: hsl(249, 24%, 94%);
