--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,119 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-:root {
-	font-family: "Philosopher", -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, "Helvetica Neue", Arial, sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
-	/* line-height: 1.5; */
-	/* letter-spacing: 0.5px; */
+@plugin 'tailwindcss-animate';
 
-	background-color: var(--background);
-	color-scheme: light dark;
+@custom-variant dark (&:where(.dark, .dark *));
 
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+@theme {
+  --font-*: initial;
+  --font-serif-text: 'Crimson Pro', serif;
+  --font-sans: 'Inter', sans-serif;
+
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
+
+  --color-card: hsl(var(--card));
+  --color-card-foreground: hsl(var(--card-foreground));
+
+  --color-popover: hsl(var(--popover));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+
+  --color-primary: hsl(var(--primary));
+  --color-primary-foreground: hsl(var(--primary-foreground));
+
+  --color-secondary: hsl(var(--secondary));
+  --color-secondary-foreground: hsl(var(--secondary-foreground));
+
+  --color-muted: hsl(var(--muted));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-accent: hsl(var(--accent));
+  --color-accent-foreground: hsl(var(--accent-foreground));
+
+  --color-destructive: hsl(var(--destructive));
+  --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+  --color-border: hsl(var(--border));
+  --color-input: hsl(var(--input));
+  --color-ring: hsl(var(--ring));
+  --color-tab: hsl(var(--tab));
+  --color-tabsubtle: hsl(var(--tab-subtle));
+
+  --color-chart-1: hsl(var(--chart-1));
+  --color-chart-2: hsl(var(--chart-2));
+  --color-chart-3: hsl(var(--chart-3));
+  --color-chart-4: hsl(var(--chart-4));
+  --color-chart-5: hsl(var(--chart-5));
 }
 
-::selection {
-	background-color: hsl(var(--primary));
-	color: hsl(var(--primary-foreground));
-	opacity: 0.9;
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
 }
 
-::selection[data-value*="-"] {
-	background-color: hsl(var(--muted));
-	color: hsl(var(--muted-foreground));
-}
+@layer utilities {
+  :root {
+    font-family:
+      'Philosopher',
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      'Helvetica Neue',
+      Arial,
+      sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    /* line-height: 1.5; */
+    /* letter-spacing: 0.5px; */
 
-/* For light mode */
-:root[data-mantine-color-scheme="light"] body {
-	--mantine-color-body: hsl(249, 24%, 94%);
-}
+    background-color: var(--background);
+    color-scheme: light dark;
 
-/* For dark mode */
-:root[data-mantine-color-scheme="dark"] body {
-	--mantine-color-body: hsl(240, 3%, 13%);
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  ::selection {
+    background-color: hsl(var(--primary));
+    color: hsl(var(--primary-foreground));
+    opacity: 0.9;
+  }
+
+  ::selection[data-value*='-'] {
+    background-color: hsl(var(--muted));
+    color: hsl(var(--muted-foreground));
+  }
+
+  /* For light mode */
+  :root[data-mantine-color-scheme='light'] body {
+    --mantine-color-body: hsl(249, 24%, 94%);
+  }
+
+  /* For dark mode */
+  :root[data-mantine-color-scheme='dark'] body {
+    --mantine-color-body: hsl(240, 3%, 13%);
+  }
 }
 
 @layer base {
