--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,52 @@
-@import 'tailwindcss';
-
+@import "tailwindcss";
 @plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --font-*: initial;
-  --font-serif-text: 'Crimson Pro', serif;
-  --font-sans: 'Inter', sans-serif;
+    --font-*: initial;
+    --font-serif-text: "Crimson Pro", serif;
+    --font-sans: "Inter", sans-serif;
 
-  --radius-lg: var(--radius);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-sm: calc(var(--radius) - 4px);
+    --radius-lg: var(--radius);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-sm: calc(var(--radius) - 4px);
 
-  --color-background: hsl(var(--background));
-  --color-foreground: hsl(var(--foreground));
+    --color-background: hsl(var(--background));
+    --color-foreground: hsl(var(--foreground));
 
-  --color-card: hsl(var(--card));
-  --color-card-foreground: hsl(var(--card-foreground));
+    --color-card: hsl(var(--card));
+    --color-card-foreground: hsl(var(--card-foreground));
 
-  --color-popover: hsl(var(--popover));
-  --color-popover-foreground: hsl(var(--popover-foreground));
+    --color-popover: hsl(var(--popover));
+    --color-popover-foreground: hsl(var(--popover-foreground));
 
-  --color-primary: hsl(var(--primary));
-  --color-primary-foreground: hsl(var(--primary-foreground));
+    --color-primary: hsl(var(--primary));
+    --color-primary-foreground: hsl(var(--primary-foreground));
 
-  --color-secondary: hsl(var(--secondary));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
+    --color-secondary: hsl(var(--secondary));
+    --color-secondary-foreground: hsl(var(--secondary-foreground));
 
-  --color-muted: hsl(var(--muted));
-  --color-muted-foreground: hsl(var(--muted-foreground));
+    --color-muted: hsl(var(--muted));
+    --color-muted-foreground: hsl(var(--muted-foreground));
 
-  --color-accent: hsl(var(--accent));
-  --color-accent-foreground: hsl(var(--accent-foreground));
+    --color-accent: hsl(var(--accent));
+    --color-accent-foreground: hsl(var(--accent-foreground));
 
-  --color-destructive: hsl(var(--destructive));
-  --color-destructive-foreground: hsl(var(--destructive-foreground));
+    --color-destructive: hsl(var(--destructive));
+    --color-destructive-foreground: hsl(var(--destructive-foreground));
 
-  --color-border: hsl(var(--border));
-  --color-input: hsl(var(--input));
-  --color-ring: hsl(var(--ring));
-  --color-tab: hsl(var(--tab));
-  --color-tabsubtle: hsl(var(--tab-subtle));
+    --color-border: hsl(var(--border));
+    --color-input: hsl(var(--input));
+    --color-ring: hsl(var(--ring));
+    --color-tab: hsl(var(--tab));
+    --color-tabsubtle: hsl(var(--tab-subtle));
 
-  --color-chart-1: hsl(var(--chart-1));
-  --color-chart-2: hsl(var(--chart-2));
-  --color-chart-3: hsl(var(--chart-3));
-  --color-chart-4: hsl(var(--chart-4));
-  --color-chart-5: hsl(var(--chart-5));
+    --color-chart-1: hsl(var(--chart-1));
+    --color-chart-2: hsl(var(--chart-2));
+    --color-chart-3: hsl(var(--chart-3));
+    --color-chart-4: hsl(var(--chart-4));
+    --color-chart-5: hsl(var(--chart-5));
 }
 
 /*
@@ -59,151 +58,151 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
-  }
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentcolor);
+    }
 }
 
 @layer utilities {
-  :root {
-    font-family:
-      'Philosopher',
-      -apple-system,
-      BlinkMacSystemFont,
-      'Segoe UI',
-      Roboto,
-      'Helvetica Neue',
-      Arial,
-      sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    /* line-height: 1.5; */
-    /* letter-spacing: 0.5px; */
+    :root {
+        font-family:
+            "Philosopher",
+            -apple-system,
+            BlinkMacSystemFont,
+            "Segoe UI",
+            Roboto,
+            "Helvetica Neue",
+            Arial,
+            sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        /* line-height: 1.5; */
+        /* letter-spacing: 0.5px; */
 
-    background-color: var(--background);
-    color-scheme: light dark;
+        background-color: var(--background);
+        color-scheme: light dark;
 
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+        font-synthesis: none;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
 
-  ::selection {
-    background-color: hsl(var(--primary));
-    color: hsl(var(--primary-foreground));
-    opacity: 0.9;
-  }
+    ::selection {
+        background-color: hsl(var(--primary));
+        color: hsl(var(--primary-foreground));
+        opacity: 0.9;
+    }
 
-  ::selection[data-value*='-'] {
-    background-color: hsl(var(--muted));
-    color: hsl(var(--muted-foreground));
-  }
+    ::selection[data-value*="-"] {
+        background-color: hsl(var(--muted));
+        color: hsl(var(--muted-foreground));
+    }
 
-  /* For light mode */
-  :root[data-mantine-color-scheme='light'] body {
-    --mantine-color-body: hsl(249, 24%, 94%);
-  }
+    /* For light mode */
+    :root[data-mantine-color-scheme="light"] body {
+        --mantine-color-body: hsl(249, 24%, 94%);
+    }
 
-  /* For dark mode */
-  :root[data-mantine-color-scheme='dark'] body {
-    --mantine-color-body: hsl(240, 3%, 13%);
-  }
+    /* For dark mode */
+    :root[data-mantine-color-scheme="dark"] body {
+        --mantine-color-body: hsl(240, 3%, 13%);
+    }
 }
 
 @layer base {
-	:root {
-		--background: 249 24% 94%;
-		--foreground: 240 3% 13%;
-		--card: 0 0% 100%;
-		--card-foreground: 0 0% 3.9%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 0 0% 3.9%;
-		--primary: 238 30% 39%;
-		--primary-foreground: 249 24% 94%;
-		--secondary: 239 69% 86%;
-		--secondary-foreground: 240 3% 13%;
-		--muted: 0 0% 96.1%;
-		--muted-foreground: 0 0% 21%;
-		--accent: 238 30% 39%;
-		--accent-foreground: 249 24% 94%;
-		--popover: 50 0% 20%;
-		--popover-foreground: 0 0% 3.9%;
-		--tab: 0 0% 21%;
-		--tab-subtle: 250 7% 84%;
-		--destructive: 0 84% 60%;
-		--destructive-foreground: 0 84% 60%;
-		--border: 0 0% 89.8%;
-		--input: 0 0% 89.8%;
-		--ring: 0 0% 3.9%;
-		--chart-1: 12 76% 61%;
-		--chart-2: 173 58% 39%;
-		--chart-3: 197 37% 24%;
-		--chart-4: 43 74% 66%;
-		--chart-5: 27 87% 67%;
-		--radius: 0.5rem;
-	}
-	.dark {
-		--background: 240 3% 13%;
-		--foreground: 249 24% 94%;
-		--card: 0 0% 3.9%;
-		--card-foreground: 0 0% 98%;
-		--popover: 0 0% 3.9%;
-		--popover-foreground: 0 0% 98%;
-		--primary: 239 69% 86%;
-		--primary-foreground: 240 3% 13%;
-		--secondary: 238 30% 39%;
-		--secondary-foreground: 249 24% 94%;
-		--muted: 236 27% 24%;
-		--muted-foreground: 0 0% 78%;
-		--accent: 239 69% 86%;
-		--accent-foreground: 240 3% 13%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 0 0% 3.9%;
-		--tab: 0 0% 78%;
-		--tab-subtle: 240 2% 23%;
-		--destructive: 0 84% 60%;
-		--destructive-foreground: 0 84% 60%;
-		--border: 0 0% 14.9%;
-		--input: 0 0% 14.9%;
-		--ring: 0 0% 83.1%;
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
-	}
+    :root {
+        --background: 249 24% 94%;
+        --foreground: 240 3% 13%;
+        --card: 0 0% 100%;
+        --card-foreground: 0 0% 3.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 0 0% 3.9%;
+        --primary: 238 30% 39%;
+        --primary-foreground: 249 24% 94%;
+        --secondary: 239 69% 86%;
+        --secondary-foreground: 240 3% 13%;
+        --muted: 0 0% 96.1%;
+        --muted-foreground: 0 0% 21%;
+        --accent: 238 30% 39%;
+        --accent-foreground: 249 24% 94%;
+        --popover: 50 0% 20%;
+        --popover-foreground: 0 0% 3.9%;
+        --tab: 0 0% 21%;
+        --tab-subtle: 250 7% 84%;
+        --destructive: 0 84% 60%;
+        --destructive-foreground: 0 84% 60%;
+        --border: 0 0% 89.8%;
+        --input: 0 0% 89.8%;
+        --ring: 0 0% 3.9%;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+        --radius: 0.5rem;
+    }
+    .dark {
+        --background: 240 3% 13%;
+        --foreground: 249 24% 94%;
+        --card: 0 0% 3.9%;
+        --card-foreground: 0 0% 98%;
+        --popover: 0 0% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 239 69% 86%;
+        --primary-foreground: 240 3% 13%;
+        --secondary: 238 30% 39%;
+        --secondary-foreground: 249 24% 94%;
+        --muted: 236 27% 24%;
+        --muted-foreground: 0 0% 78%;
+        --accent: 239 69% 86%;
+        --accent-foreground: 240 3% 13%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 0 0% 3.9%;
+        --tab: 0 0% 78%;
+        --tab-subtle: 240 2% 23%;
+        --destructive: 0 84% 60%;
+        --destructive-foreground: 0 84% 60%;
+        --border: 0 0% 14.9%;
+        --input: 0 0% 14.9%;
+        --ring: 0 0% 83.1%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
 }
 @layer base {
-	* {
-		@apply border-border;
-	}
-	body {
-		@apply bg-background text-foreground;
-	}
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
 #note {
-	position: relative;
+    position: relative;
 }
 
 #note:before {
-	content: "";
-	position: absolute;
-	width: 50%;
-	height: 50%;
-	border-radius: 0.3rem;
-	z-index: -1;
-	opacity: 0;
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    border-radius: 0.3rem;
+    z-index: -1;
+    opacity: 0;
 }
 
 #debug {
-	background-color: rgba(0, 255, 255, 0.1);
-	border: 1px solid rgba(0, 255, 255, 0.2);
-	color: rgba(0, 255, 255, 0.8);
+    background-color: rgba(0, 255, 255, 0.1);
+    border: 1px solid rgba(0, 255, 255, 0.2);
+    color: rgba(0, 255, 255, 0.8);
 }
