--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
 @import "tailwindcss";
 @plugin 'tailwindcss-animate';
 
@@ -6,6 +8,7 @@
 @theme {
     --font-*: initial;
     --font-serif-text: "Crimson Pro", serif;
+    --font-serif-title: "Philosopher", serif;
     --font-sans: "Inter", sans-serif;
 
     --radius-lg: var(--radius);
@@ -70,7 +73,7 @@
 @layer utilities {
     :root {
         font-family:
-            "Philosopher",
+            "Inter",
             -apple-system,
             BlinkMacSystemFont,
             "Segoe UI",
