--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@
 }
 
 @layer base {
-    :root {
+  :root {
         --background: 248 12.3% 88.9%;
         --background-light: 248 22.58% 93.92%;
         --foreground: 240 3% 13%;
@@ -174,7 +174,19 @@
         --chart-5: 340 75% 55%;
         --radius: 0.25rem;
         --tag: 240 2% 21%;
-    }
+  }
+}
+
+/* Hide number input spinners for a cleaner UI */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield;
+	appearance: textfield;
 }
 @layer base {
     * {
