--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,7 @@
 
     --color-primary: hsl(var(--primary));
     --color-primary-foreground: hsl(var(--primary-foreground));
-
-    --color-secondary: hsl(var(--secondary));
-    --color-secondary-foreground: hsl(var(--secondary-foreground));
+    --color-primary-hovered: hsl(var(--primary-hovered));
 
     --color-muted: hsl(var(--muted));
     --color-muted-foreground: hsl(var(--muted-foreground));
@@ -42,6 +40,16 @@
 
     --color-destructive: hsl(var(--destructive));
     --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+    --color-danger-000: hsl(var(--danger-000));
+    --color-danger-100: hsl(var(--danger-100));
+    --color-danger-200: hsl(var(--danger-200));
+    --color-danger-900: hsl(var(--danger-900));
+
+    --color-border-100: hsl(var(--border-100));
+    --color-border-200: hsl(var(--border-200));
+    --color-border-300: hsl(var(--border-300));
+    --color-border-400: hsl(var(--border-400));
 
     --color-soft: hsl(var(--soft));
     --color-soft-foreground: hsl(var(--soft-foreground));
@@ -103,9 +111,10 @@
 }
 
 @layer base {
-  :root {
+    :root {
         --background: 248 12.3% 88.9%;
         --background-light: 248 22.58% 93.92%;
+
         --foreground: 240 3% 13%;
         --shadow: 250 4% 71%;
         --card: 0 0% 100%;
@@ -114,16 +123,26 @@
         --popover-foreground: 0 0% 3.9%;
         --primary: 238 30% 39%;
         --primary-foreground: 249 23% 94%;
-        --secondary: 239 69% 86%;
-        --secondary-foreground: 240 3% 13%;
+        --primary-hovered: 243 17% 79%;
         --muted: 240 6% 54%;
         --muted-foreground: 0 0% 14%;
         --accent: 238 30% 39%;
-        --accent-foreground: 249 24% 94%;
+        --accent-foreground: 249 23% 94%;
         --popover: 50 0% 20%;
         --popover-foreground: 0 0% 3.9%;
         --tab: 0 0% 14%;
         --tab-subtle: 250 7% 84%;
+
+        --danger-000: 0 58.6% 34.1%;
+        --danger-100: 0 56.2% 45.4%;
+        --danger-200: 0 56.2% 45.4%;
+        --danger-900: 0 100% 95%;
+
+        --border-100: 30 3.3% 11.8%;
+        --border-200: 30 3.3% 11.8%;
+        --border-300: 30 3.3% 11.8%;
+        --border-400: 30 3.3% 11.8%;
+
         --destructive: 346 42% 88%;
         --destructive-foreground: 0 84% 52%;
         --soft: 240 0% 60%;
@@ -150,16 +169,26 @@
         --popover-foreground: 0 0% 98%;
         --primary: 240 29% 41%;
         --primary-foreground: 249 23% 94%;
-        --secondary: 238 30% 39%;
-        --secondary-foreground: 249 24% 94%;
+        --primary-hovered: 240 14% 19%;
         --muted: 249 4% 65%; /* a2a1a8*/
         --muted-foreground: 0 0% 78%;
-        --accent: 239 69% 86%;
-        --accent-foreground: 240 3% 13%;
+        --accent: 240 29% 41%;
+        --accent-foreground: 249 23% 94%;
         --popover: 0 0% 100%;
         --popover-foreground: 0 0% 3.9%;
         --tab: 0 0% 78%;
         --tab-subtle: 240 2% 23%;
+
+        --danger-000: 0 98.4% 75.1%;
+        --danger-100: 0 67% 59.6%;
+        --danger-200: 0 67% 59.6%;
+        --danger-900: 0 46.5% 27.8%;
+
+        --border-100: 51 16.5% 84.5%;
+        --border-200: 51 16.5% 84.5%;
+        --border-300: 51 16.5% 84.5%;
+        --border-400: 51 16.5% 84.5%;
+
         --destructive: 0 22% 18%;
         --destructive-foreground: 0 84% 60%;
         --soft: 240 35% 82%;
@@ -174,19 +203,19 @@
         --chart-5: 340 75% 55%;
         --radius: 0.25rem;
         --tag: 240 2% 21%;
-  }
+    }
 }
 
 /* Hide number input spinners for a cleaner UI */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 input[type="number"] {
-	-moz-appearance: textfield;
-	appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
 @layer base {
     * {
@@ -215,16 +244,6 @@ input[type="number"] {
     background-color: rgba(0, 255, 255, 0.1);
     border: 1px solid rgba(0, 255, 255, 0.2);
     color: rgba(0, 255, 255, 0.8);
-}
-
-.tab-active {
-    background-color: hsl(var(--primary));
-    color: hsl(var(--primary-foreground));
-}
-
-.tab-pending {
-    color: hsl(var(--foreground-foreground));
-    background-color: hsl(var(--foreground));
 }
 
 @theme {
